--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -1,1 +1,48 @@
-<h1>Hi</h1>
+<h1>Hello User</h1>
+
+<div class="list">
+<ul>
+<li>
+  <input type = "checkbox">
+  <a href= "show.html"> do homework
+  </a>
+  <a href="#" class= "delete" >Delete </a>
+  </li>
+<li>
+  <input type = "checkbox">
+<a href ="show.html">
+ wash dishes
+  </a>
+  <a href="#" class= "delete" >Delete</a>  </li>
+<li>
+  <input type = "checkbox">
+<a href="show.html">
+  fold clothes
+</a>
+<span class= "pomodoro-estimate"> 1 pomodoro</span>
+<a href="#" class= " delete" >Delete</a>
+  </li>
+<li>
+<input type = "checkbox">
+  <a href="show.html">
+    clean project
+  </a>
+  <a href="#" class= "delete" >Delete</a>
+  </li>
+<li>
+  <input type = "checkbox">
+  <a href= "show.html">
+    do assignment
+  </a>
+  <a href="#" class= "delete">Delete</a>
+</li>
+<li>
+<input type = "checkbox">
+<a href ="show.html">
+  go to bed
+</a>
+<a href="#"class = "delete">Delete</a>
+</li>
+</ul>
+</div>
+<button>+ Add</button>
