--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -1,4 +1,4 @@
-
+<h1> To do number <%= params[:id] %></h1>
       <p>  <%=@todo_description%>
         Due Monday 
         <span><%=@pomo_est %> pomodoros</span>
