--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -25,7 +25,7 @@
 <li>
 <input type = "checkbox">
   <a href="show.html">
-    clean project
+    clean room
   </a>
   <a href="#" class= "delete" >Delete</a>
   </li>
