--- a/app/views/todo/index.html.erb
+++ b/app/views/todo/index.html.erb
@@ -4,41 +4,40 @@
 <ul>
 <li>
   <input type = "checkbox">
-  <a href= "show.html"> do homework
+  <a href= "show/1"> do homework
   </a>
   <a href="#" class= "delete" >Delete </a>
   </li>
 <li>
   <input type = "checkbox">
-<a href ="show.html">
+<a href ="show/2">
  wash dishes
   </a>
   <a href="#" class= "delete" >Delete</a>  </li>
 <li>
   <input type = "checkbox">
-<a href="show.html">
+<a href="show/3">
   fold clothes
 </a>
-<span class= "pomodoro-estimate"> 1 pomodoro</span>
 <a href="#" class= " delete" >Delete</a>
   </li>
 <li>
 <input type = "checkbox">
-  <a href="show.html">
+  <a href="show/4">
     clean room
   </a>
   <a href="#" class= "delete" >Delete</a>
   </li>
 <li>
   <input type = "checkbox">
-  <a href= "show.html">
+  <a href= "show/5">
     do assignment
   </a>
   <a href="#" class= "delete">Delete</a>
 </li>
 <li>
 <input type = "checkbox">
-<a href ="show.html">
+<a href ="show/6">
   go to bed
 </a>
 <a href="#"class = "delete">Delete</a>
