--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -2,6 +2,6 @@
       <p>  <%=@todo_description%>
         Due Monday 
         <span><%=@pomo_est %> pomodoros</span>
-    
+    <a href="/todo/index">home</a>
         </p>
   
