--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -1,7 +1,7 @@
 <h1> To do number <%= params[:id] %></h1>
-      <p>  <%=@todo_description%>
+      <p>  <%=@todo.description%>
         Due Monday 
-        <span><%=@pomo_est %> pomodoros</span>
+        <span><%=@todo.pomodoro_estimate %> pomodoros</span>
     <a href="/todo/index">home</a>
         </p>
   
