--- a/app/views/todo/show.html.erb
+++ b/app/views/todo/show.html.erb
@@ -3,5 +3,6 @@
         Due Monday 
         <span><%=@todo.pomodoro_estimate %> pomodoros</span>
     <a href="/todo/index">home</a>
+    <a href="/todo/edit/<%=@todo.id%>">Edit</a>
         </p>
   
